<resources>
    <string name="app_name">TripTracker</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="name">Driver</string>
    <string name="company">Company</string>
    <string name="car_ref">Car Ref.</string>
    <string name="kml">km/l</string>
    <string name="fuel">Fuel</string>
    <string name="cancel">CANCEL</string>
    <string name="back">BACK</string>
    <string name="save">SAVE</string>
    <string name="font_size1">\@18sp</string>
    <string name="trip_tracker">TRIP TRACKER</string>
    <string name="settings">PLEASE ENTER OR ALTER YOUR DATA</string>
    <string name="textview">TextView</string>
    <string name="button_tracktrip">TRACK A TRIP</string>
    <string name="button_add_expense">ADD TRIP EXPENSE</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_report">SEND A REPORT</string>
    <string name="button_logout">LOGOUT</string>
    <string name="confirm_data">CONFIRM YOUR DATA BEFORE START</string>
    <string name="reason">Reason</string>
    <string name="destiny">Destination</string>
    <string name="settings_note">Notes:</string>
    <string name="settings_note1">1. Those data will be included in your report.</string>
    <string name="settings_note2">2. You can alter that just before upload.</string>
    <string name="trackingtrip">TRACKING TRIP</string>
    <string name="finish">FINISH</string>
    <string name="tripfinish">TRIP FINISHED</string>
    <string name="selecttrip">PLEASE SELECT A TRIP</string>
    <string name="camera">CAMERA</string>
    <string name="value">Value</string>
    <string name="description">Description</string>
    <string name="send">SEND</string>
    <string name="select_dates">SELECT PERIOD OF TIME TO BUILD THE REPORT</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="report">REPORT</string>
    <string name="start">START</string>
    <string name="tripref">Trip Ref.:</string>
    <string name="date">Date:</string>
    <string name="reason_">Reason:</string>
    <string name="destination">Destination:</string>
    <string name="border">border</string>
</resources>