<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">


    <Button
        android:id="@+id/cancel_selectdate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/report_selectdate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/report"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/cancel_selectdate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/select_dates"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:text="@string/from"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:text="@string/to"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>