<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <Button
        android:id="@+id/cancelImageViewer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraImageViewer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/camera"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/cancelImageViewer"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startBefore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/cameraImageViewer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="436dp"
        android:text="@string/value"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/field_Value"
        android:layout_width="245dp"
        android:layout_height="28dp"
        android:layout_marginTop="436dp"
        android:autofillHints=""
        android:background="@color/colorButton"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:isScrollContainer="false"
        android:shadowColor="@color/colorShadow"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecundary"
        android:textColorHint="@color/colorButton"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/field_Description"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/colorButton"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:isScrollContainer="false"
        android:shadowColor="@color/colorShadow"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecundary"
        android:textColorHint="@color/colorButton"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/field_Value" />


</androidx.constraintlayout.widget.ConstraintLayout>